# project

./: Makefile  README.md  algorithm  get_avg_time.sh  in  join.cpp  join.h  joiner  joiner-main.cpp  main.cpp  project-main.cpp  radixhashjoin-main.cpp  relation.cpp  relation.h  rowids  segfaultin  small.in  temporary_code_dump  test  test.cpp  test1
Examples/: Makefile  QueryOptimization.cpp  problem.in  small.in  test_scheduler.cpp
Headers/: ConfigureParameters.h  FieldTypes.h  HashFunctions.h  JobScheduler.h  JoinRelation.h  JoinResults.h  Operations.h  Optimizer.h  Parser.h  RadixHashJoin.h  Relation.h  SQLParser.h  macros.h  util.h
harness/: Makefile  harness  run.sh  runTestharness.sh
src/: JobScheduler.cpp  JoinRelation.cpp  JoinResults.cpp  Optimizer.cpp  Parser.cpp  RadixHashJoin.cpp  Relation.cpp  SQLParser.cpp  util.cpp
submission/: CMakeLists.txt  Joiner.cpp  Operators.cpp  Parser.cpp  main.cpp  runTestharness.sh
submission/include/: Joiner.hpp  Operators.hpp  Parser.hpp
unit_testing/: test-joiner.cpp  test-main.cpp  test-optimizer.cpp  test-radixhashjoin.cpp  test.cpp  test_joiner.cpp
